# wickit

./: README.md  SHUFFLE.md  WICKIT_v0.2.0_ROADMAP.md  pyproject.toml  setup.py
shared/schemas/: service-info.json
src/wickit/: __init__.py  alter_egos.py  autopilot.py  cloudbridge.py  hideaway.py  presets.py  shuffle.py
src/wickit.egg-info/: SOURCES.txt
tests/: test_config.py  test_profiles.py  test_sync_integration.py
